--- a/index-lite.html
+++ b/index-lite.html
@@ -41,10 +41,6 @@
   
   
   
-  <script type="text/javascript" src="vendor/bootstrap-filestyl/src/bootstrap-filestyle.js"></script>
-  
-  
-  
   <script type="text/javascript" src="vendor/moment/min/moment.min.js"></script>
   
   
@@ -81,15 +77,23 @@
   
   
   
-  <script type="text/javascript" src="vendor/mgrs/dist/mgrs.js"></script>
+  <script type="text/javascript" src="vendor/blueimp-gallery/js/blueimp-gallery.js"></script>
   
   
   
-  <script type="text/javascript" src="vendor/blueimp-gallery/js/jquery.blueimp-gallery.min.js"></script>
+  <script type="text/javascript" src="vendor/blueimp-gallery/js/blueimp-gallery-fullscreen.js"></script>
   
   
   
-  <script type="text/javascript" src="vendor/blueimp-bootstrap-image-gallery/js/bootstrap-image-gallery.min.js"></script>
+  <script type="text/javascript" src="vendor/blueimp-gallery/js/blueimp-gallery-indicator.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="vendor/blueimp-gallery/js/blueimp-helper.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="vendor/blueimp-bootstrap-image-gallery/js/bootstrap-image-gallery.js"></script>
   
   
   
@@ -297,7 +301,23 @@
   
   
   
+  <script type="text/javascript" src="src/common/map/ChapterDelete.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="src/common/map/ChapterTitle.js"></script>
+  
+  
+  
   <script type="text/javascript" src="src/common/map/MapModule.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="src/common/map/MapProperties.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="src/common/map/MapSave.js"></script>
   
   
   
@@ -409,7 +429,35 @@
   
   
   
+  <script type="text/javascript" src="src/common/story/StoryModule.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="src/common/story/StoryService.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="src/common/storybox/BoxService.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="src/common/storybox/StoryBoxDirective.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="src/common/storybox/StoryBoxInfoDirective.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="src/common/storybox/StoryBoxModule.js"></script>
+  
+  
+  
   <script type="text/javascript" src="src/common/sync/AddSynchronizationLinkDirective.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="src/common/sync/RemoteSelectDirective.js"></script>
   
   
   
