--- a/index-lite.html
+++ b/index-lite.html
@@ -77,6 +77,42 @@
   
   
   
+  <script type="text/javascript" src="vendor/vis/dist/vis.min.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="vendor/nouislider/distribute/jquery.nouislider.min.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="vendor/story-tools/dist/story-tools-core.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="vendor/story-tools/dist/story-tools-core-tpls.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="vendor/story-tools/dist/story-tools-core-ng.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="vendor/story-tools/dist/story-tools-edit.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="vendor/story-tools/dist/story-tools-edit-ng.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="vendor/story-tools/dist/story-tools-edit-tpls.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="vendor/story-tools/dist/ows.js"></script>
+  
+  
+  
   <script type="text/javascript" src="vendor/blueimp-gallery/js/blueimp-gallery.js"></script>
   
   
@@ -102,6 +138,10 @@
   
   
   <script type="text/javascript" src="vendor/angular-xeditable/dist/js/xeditable.min.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="vendor/multilevel-menu/jquery.multilevelpushmenu.min.js"></script>
   
   
   
