--- a/index-lite.html
+++ b/index-lite.html
@@ -41,6 +41,10 @@
   
   
   
+  <script type="text/javascript" src="vendor/bootstrap-filestyl/src/bootstrap-filestyle.js"></script>
+  
+  
+  
   <script type="text/javascript" src="vendor/moment/min/moment.min.js"></script>
   
   
@@ -77,59 +81,15 @@
   
   
   
-  <script type="text/javascript" src="vendor/vis/dist/vis.min.js"></script>
+  <script type="text/javascript" src="vendor/mgrs/dist/mgrs.js"></script>
   
   
   
-  <script type="text/javascript" src="vendor/nouislider/distribute/jquery.nouislider.min.js"></script>
+  <script type="text/javascript" src="vendor/blueimp-gallery/js/jquery.blueimp-gallery.min.js"></script>
   
   
   
-  <script type="text/javascript" src="vendor/story-tools/dist/story-tools-core.js"></script>
-  
-  
-  
-  <script type="text/javascript" src="vendor/story-tools/dist/story-tools-core-tpls.js"></script>
-  
-  
-  
-  <script type="text/javascript" src="vendor/story-tools/dist/story-tools-core-ng.js"></script>
-  
-  
-  
-  <script type="text/javascript" src="vendor/story-tools/dist/story-tools-edit.js"></script>
-  
-  
-  
-  <script type="text/javascript" src="vendor/story-tools/dist/story-tools-edit-ng.js"></script>
-  
-  
-  
-  <script type="text/javascript" src="vendor/story-tools/dist/story-tools-edit-tpls.js"></script>
-  
-  
-  
-  <script type="text/javascript" src="vendor/story-tools/dist/ows.js"></script>
-  
-  
-  
-  <script type="text/javascript" src="vendor/blueimp-gallery/js/blueimp-gallery.js"></script>
-  
-  
-  
-  <script type="text/javascript" src="vendor/blueimp-gallery/js/blueimp-gallery-fullscreen.js"></script>
-  
-  
-  
-  <script type="text/javascript" src="vendor/blueimp-gallery/js/blueimp-gallery-indicator.js"></script>
-  
-  
-  
-  <script type="text/javascript" src="vendor/blueimp-gallery/js/blueimp-helper.js"></script>
-  
-  
-  
-  <script type="text/javascript" src="vendor/blueimp-bootstrap-image-gallery/js/bootstrap-image-gallery.js"></script>
+  <script type="text/javascript" src="vendor/blueimp-bootstrap-image-gallery/js/bootstrap-image-gallery.min.js"></script>
   
   
   
@@ -138,10 +98,6 @@
   
   
   <script type="text/javascript" src="vendor/angular-xeditable/dist/js/xeditable.min.js"></script>
-  
-  
-  
-  <script type="text/javascript" src="vendor/multilevel-menu/jquery.multilevelpushmenu.min.js"></script>
   
   
   
@@ -341,23 +297,7 @@
   
   
   
-  <script type="text/javascript" src="src/common/map/ChapterDelete.js"></script>
-  
-  
-  
-  <script type="text/javascript" src="src/common/map/ChapterTitle.js"></script>
-  
-  
-  
   <script type="text/javascript" src="src/common/map/MapModule.js"></script>
-  
-  
-  
-  <script type="text/javascript" src="src/common/map/MapProperties.js"></script>
-  
-  
-  
-  <script type="text/javascript" src="src/common/map/MapSave.js"></script>
   
   
   
@@ -469,35 +409,7 @@
   
   
   
-  <script type="text/javascript" src="src/common/story/StoryModule.js"></script>
-  
-  
-  
-  <script type="text/javascript" src="src/common/story/StoryService.js"></script>
-  
-  
-  
-  <script type="text/javascript" src="src/common/storybox/BoxService.js"></script>
-  
-  
-  
-  <script type="text/javascript" src="src/common/storybox/StoryBoxDirective.js"></script>
-  
-  
-  
-  <script type="text/javascript" src="src/common/storybox/StoryBoxInfoDirective.js"></script>
-  
-  
-  
-  <script type="text/javascript" src="src/common/storybox/StoryBoxModule.js"></script>
-  
-  
-  
   <script type="text/javascript" src="src/common/sync/AddSynchronizationLinkDirective.js"></script>
-  
-  
-  
-  <script type="text/javascript" src="src/common/sync/RemoteSelectDirective.js"></script>
   
   
   
