--- a/index-lite.html
+++ b/index-lite.html
@@ -17,6 +17,22 @@
 
   <!-- compiled JavaScript -->
   
+  <script type="text/javascript" src="vendor/jquery-sortable/source/js/jquery-sortable-min.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="vendor/x2js/xml2json.min.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="vendor/blueimp-gallery/js/jquery.blueimp-gallery.min.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="vendor/blueimp-bootstrap-image-gallery/js/bootstrap-image-gallery.min.js"></script>
+  
+  
+  
   <script type="text/javascript" src="src/app/DiffPanelController.js"></script>
   
   
