--- a/index-lite.html
+++ b/index-lite.html
@@ -17,11 +17,71 @@
 
   <!-- compiled JavaScript -->
   
+  <script type="text/javascript" src="vendor/jquery/jquery.min.js"></script>
+  
+  
+  
   <script type="text/javascript" src="vendor/jquery-sortable/source/js/jquery-sortable-min.js"></script>
   
   
   
+  <script type="text/javascript" src="vendor/angular/angular.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="vendor/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="vendor/angular-ui-router/release/angular-ui-router.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="vendor/bootstrap/dist/js/bootstrap.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="vendor/bootstrap-filestyl/src/bootstrap-filestyle.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="vendor/moment/min/moment.min.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="vendor/bootstrap3-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="vendor/bootstrap3-datetimepicker/src/js/locales/bootstrap-datetimepicker.es.js"></script>
+  
+  
+  
   <script type="text/javascript" src="vendor/x2js/xml2json.min.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="vendor/angular-translate/angular-translate.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="vendor/angular-cookies/angular-cookies.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="vendor/ol3/ol-debug.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="vendor/d3/d3.min.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="vendor/proj4/dist/proj4-src.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="vendor/mgrs/dist/mgrs.js"></script>
   
   
   
@@ -30,6 +90,14 @@
   
   
   <script type="text/javascript" src="vendor/blueimp-bootstrap-image-gallery/js/bootstrap-image-gallery.min.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="vendor/bootstrap-sortable/Scripts/bootstrap-sortable.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="vendor/angular-xeditable/dist/js/xeditable.min.js"></script>
   
   
   
