--- a/maploom-lite.html
+++ b/maploom-lite.html
@@ -411,6 +411,22 @@
   
   
   
+  <script type="text/javascript" src="{{STATIC_URL}}maploom/src/common/storybox/BoxService.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="{{STATIC_URL}}maploom/src/common/storybox/StoryBoxDirective.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="{{STATIC_URL}}maploom/src/common/storybox/StoryBoxInfoDirective.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="{{STATIC_URL}}maploom/src/common/storybox/StoryBoxModule.js"></script>
+  
+  
+  
   <script type="text/javascript" src="{{STATIC_URL}}maploom/src/common/sync/AddSynchronizationLinkDirective.js"></script>
   
   
