--- a/maploom-lite.html
+++ b/maploom-lite.html
@@ -43,10 +43,6 @@
   
   
   
-  <script type="text/javascript" src="{{STATIC_URL}}maploom/vendor/bootstrap-filestyl/src/bootstrap-filestyle.js"></script>
-  
-  
-  
   <script type="text/javascript" src="{{STATIC_URL}}maploom/vendor/moment/min/moment.min.js"></script>
   
   
@@ -83,15 +79,59 @@
   
   
   
-  <script type="text/javascript" src="{{STATIC_URL}}maploom/vendor/mgrs/dist/mgrs.js"></script>
+  <script type="text/javascript" src="{{STATIC_URL}}maploom/vendor/vis/dist/vis.min.js"></script>
   
   
   
-  <script type="text/javascript" src="{{STATIC_URL}}maploom/vendor/blueimp-gallery/js/jquery.blueimp-gallery.min.js"></script>
+  <script type="text/javascript" src="{{STATIC_URL}}maploom/vendor/nouislider/distribute/jquery.nouislider.min.js"></script>
   
   
   
-  <script type="text/javascript" src="{{STATIC_URL}}maploom/vendor/blueimp-bootstrap-image-gallery/js/bootstrap-image-gallery.min.js"></script>
+  <script type="text/javascript" src="{{STATIC_URL}}maploom/vendor/story-tools/dist/story-tools-core.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="{{STATIC_URL}}maploom/vendor/story-tools/dist/story-tools-core-tpls.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="{{STATIC_URL}}maploom/vendor/story-tools/dist/story-tools-core-ng.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="{{STATIC_URL}}maploom/vendor/story-tools/dist/story-tools-edit.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="{{STATIC_URL}}maploom/vendor/story-tools/dist/story-tools-edit-ng.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="{{STATIC_URL}}maploom/vendor/story-tools/dist/story-tools-edit-tpls.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="{{STATIC_URL}}maploom/vendor/story-tools/dist/ows.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="{{STATIC_URL}}maploom/vendor/blueimp-gallery/js/blueimp-gallery.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="{{STATIC_URL}}maploom/vendor/blueimp-gallery/js/blueimp-gallery-fullscreen.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="{{STATIC_URL}}maploom/vendor/blueimp-gallery/js/blueimp-gallery-indicator.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="{{STATIC_URL}}maploom/vendor/blueimp-gallery/js/blueimp-helper.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="{{STATIC_URL}}maploom/vendor/blueimp-bootstrap-image-gallery/js/bootstrap-image-gallery.js"></script>
   
   
   
@@ -156,6 +196,10 @@
   
   
   <script type="text/javascript" src="{{STATIC_URL}}maploom/src/common/addlayers/ServerService.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="{{STATIC_URL}}maploom/src/common/addlayers/ServerServiceSpec.js"></script>
   
   
   
@@ -299,7 +343,23 @@
   
   
   
+  <script type="text/javascript" src="{{STATIC_URL}}maploom/src/common/map/ChapterDelete.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="{{STATIC_URL}}maploom/src/common/map/ChapterTitle.js"></script>
+  
+  
+  
   <script type="text/javascript" src="{{STATIC_URL}}maploom/src/common/map/MapModule.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="{{STATIC_URL}}maploom/src/common/map/MapProperties.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="{{STATIC_URL}}maploom/src/common/map/MapSave.js"></script>
   
   
   
@@ -411,6 +471,14 @@
   
   
   
+  <script type="text/javascript" src="{{STATIC_URL}}maploom/src/common/story/StoryModule.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="{{STATIC_URL}}maploom/src/common/story/StoryService.js"></script>
+  
+  
+  
   <script type="text/javascript" src="{{STATIC_URL}}maploom/src/common/storybox/BoxService.js"></script>
   
   
@@ -428,6 +496,10 @@
   
   
   <script type="text/javascript" src="{{STATIC_URL}}maploom/src/common/sync/AddSynchronizationLinkDirective.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="{{STATIC_URL}}maploom/src/common/sync/RemoteSelectDirective.js"></script>
   
   
   
