--- a/maploom-lite.html
+++ b/maploom-lite.html
@@ -79,59 +79,11 @@
   
   
   
-  <script type="text/javascript" src="{{STATIC_URL}}maploom/vendor/vis/dist/vis.min.js"></script>
+  <script type="text/javascript" src="{{STATIC_URL}}maploom/vendor/blueimp-gallery/js/jquery.blueimp-gallery.min.js"></script>
   
   
   
-  <script type="text/javascript" src="{{STATIC_URL}}maploom/vendor/nouislider/distribute/jquery.nouislider.min.js"></script>
-  
-  
-  
-  <script type="text/javascript" src="{{STATIC_URL}}maploom/vendor/story-tools/dist/story-tools-core.js"></script>
-  
-  
-  
-  <script type="text/javascript" src="{{STATIC_URL}}maploom/vendor/story-tools/dist/story-tools-core-tpls.js"></script>
-  
-  
-  
-  <script type="text/javascript" src="{{STATIC_URL}}maploom/vendor/story-tools/dist/story-tools-core-ng.js"></script>
-  
-  
-  
-  <script type="text/javascript" src="{{STATIC_URL}}maploom/vendor/story-tools/dist/story-tools-edit.js"></script>
-  
-  
-  
-  <script type="text/javascript" src="{{STATIC_URL}}maploom/vendor/story-tools/dist/story-tools-edit-ng.js"></script>
-  
-  
-  
-  <script type="text/javascript" src="{{STATIC_URL}}maploom/vendor/story-tools/dist/story-tools-edit-tpls.js"></script>
-  
-  
-  
-  <script type="text/javascript" src="{{STATIC_URL}}maploom/vendor/story-tools/dist/ows.js"></script>
-  
-  
-  
-  <script type="text/javascript" src="{{STATIC_URL}}maploom/vendor/blueimp-gallery/js/blueimp-gallery.js"></script>
-  
-  
-  
-  <script type="text/javascript" src="{{STATIC_URL}}maploom/vendor/blueimp-gallery/js/blueimp-gallery-fullscreen.js"></script>
-  
-  
-  
-  <script type="text/javascript" src="{{STATIC_URL}}maploom/vendor/blueimp-gallery/js/blueimp-gallery-indicator.js"></script>
-  
-  
-  
-  <script type="text/javascript" src="{{STATIC_URL}}maploom/vendor/blueimp-gallery/js/blueimp-helper.js"></script>
-  
-  
-  
-  <script type="text/javascript" src="{{STATIC_URL}}maploom/vendor/blueimp-bootstrap-image-gallery/js/bootstrap-image-gallery.js"></script>
+  <script type="text/javascript" src="{{STATIC_URL}}maploom/vendor/blueimp-bootstrap-image-gallery/js/bootstrap-image-gallery.min.js"></script>
   
   
   
@@ -180,6 +132,10 @@
   
   
   <script type="text/javascript" src="{{STATIC_URL}}maploom/src/common/addlayers/AddLayersDirective.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="{{STATIC_URL}}maploom/src/common/addlayers/AddLayersDirectiveSpec.js"></script>
   
   
   
@@ -343,23 +299,7 @@
   
   
   
-  <script type="text/javascript" src="{{STATIC_URL}}maploom/src/common/map/ChapterDelete.js"></script>
-  
-  
-  
-  <script type="text/javascript" src="{{STATIC_URL}}maploom/src/common/map/ChapterTitle.js"></script>
-  
-  
-  
   <script type="text/javascript" src="{{STATIC_URL}}maploom/src/common/map/MapModule.js"></script>
-  
-  
-  
-  <script type="text/javascript" src="{{STATIC_URL}}maploom/src/common/map/MapProperties.js"></script>
-  
-  
-  
-  <script type="text/javascript" src="{{STATIC_URL}}maploom/src/common/map/MapSave.js"></script>
   
   
   
@@ -471,35 +411,7 @@
   
   
   
-  <script type="text/javascript" src="{{STATIC_URL}}maploom/src/common/story/StoryModule.js"></script>
-  
-  
-  
-  <script type="text/javascript" src="{{STATIC_URL}}maploom/src/common/story/StoryService.js"></script>
-  
-  
-  
-  <script type="text/javascript" src="{{STATIC_URL}}maploom/src/common/storybox/BoxService.js"></script>
-  
-  
-  
-  <script type="text/javascript" src="{{STATIC_URL}}maploom/src/common/storybox/StoryBoxDirective.js"></script>
-  
-  
-  
-  <script type="text/javascript" src="{{STATIC_URL}}maploom/src/common/storybox/StoryBoxInfoDirective.js"></script>
-  
-  
-  
-  <script type="text/javascript" src="{{STATIC_URL}}maploom/src/common/storybox/StoryBoxModule.js"></script>
-  
-  
-  
   <script type="text/javascript" src="{{STATIC_URL}}maploom/src/common/sync/AddSynchronizationLinkDirective.js"></script>
-  
-  
-  
-  <script type="text/javascript" src="{{STATIC_URL}}maploom/src/common/sync/RemoteSelectDirective.js"></script>
   
   
   
