--- a/index-lite.html
+++ b/index-lite.html
@@ -297,6 +297,14 @@
   
   
   
+  <script type="text/javascript" src="src/common/map/MapDirective.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="src/common/map/MapDirectiveSpec.js"></script>
+  
+  
+  
   <script type="text/javascript" src="src/common/map/MapModule.js"></script>
   
   
