publish gh-pages (auto)
branch:       hypermap
SHA:          813223804c4fd7d2c3d56ffd79537d06930a14c9
range SHA:    8c50f0444858...813223804c4f
build id:     129172814
build number: 93

--- a/index-lite.html
+++ b/index-lite.html
@@ -101,6 +101,10 @@
   
   
   
+  <script type="text/javascript" src="vendor/angularjs-slider/dist/rzslider.min.js"></script>
+  
+  
+  
   <script type="text/javascript" src="src/app/DiffPanelController.js"></script>
   
   
@@ -138,6 +142,10 @@
   
   
   <script type="text/javascript" src="src/common/addlayers/AddLayersDirective.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="src/common/addlayers/AddLayersFilterDirective.js"></script>
   
   
   
