publish gh-pages (auto)
branch:       hypermap
SHA:          a762746619e326413ce66fb8350be17cb5f69081
range SHA:    2d65d886d2a2...a762746619e3
build id:     139335372
build number: 252

--- a/index-lite.html
+++ b/index-lite.html
@@ -10,7 +10,7 @@
 
   <!-- compiled CSS -->
   
-  <link rel="stylesheet" type="text/css" href="assets/MapLoom-1.2.0.css"/>
+  <link rel="stylesheet" type="text/css" href="assets/MapLoom-1.5.0.css"/>
   
 
   
@@ -282,6 +282,10 @@
   
   
   <script type="text/javascript" src="src/common/history/HistoryService.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="src/common/layers/LayerAttributeVisibilityDirective.js"></script>
   
   
   
