--- a/maploom-lite.html
+++ b/maploom-lite.html
@@ -12,7 +12,7 @@
 
   <!-- compiled CSS -->
   
-  <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}maploom/assets/MapLoom-1.2.0.css"/>
+  <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}maploom/assets/MapLoom-1.5.0.css"/>
   
 
   
@@ -284,6 +284,10 @@
   
   
   <script type="text/javascript" src="{{STATIC_URL}}maploom/src/common/history/HistoryService.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="{{STATIC_URL}}maploom/src/common/layers/LayerAttributeVisibilityDirective.js"></script>
   
   
   
