Cleaning and separating functions belonging to addLayers and registryLayers

--- a/src/index.html
+++ b/src/index.html
@@ -212,10 +212,10 @@
 </div>
 <!--modal titles are in a lower case underscore separated format so that they can be translated-->
 <div loom-modal id="registry-layer-dialog" modal-title="registry_layers">
-  <div loom-addlayers id="registry-layers"></div>
+  <div loom-registrylayers id="registry-layers"></div>
 </div>
 <div loom-modal id="add-layer-dialog" modal-title="add_layers">
-  <div loom-addlayerss></div>
+  <div loom-addlayers></div>
 </div>
 <div loom-modal id="add-server-dialog" modal-title="add_server">
   <div loom-add-server id="add-server">
