publish gh-pages (auto)
branch:       hypermap
SHA:          ee2906fce1cdca7bd5adfc6dc869d6ecb194a17e
range SHA:    a22864f05f22...ee2906fce1cd
build id:     140651582
build number: 262

--- a/maploom-lite.html
+++ b/maploom-lite.html
@@ -163,6 +163,14 @@
   
   
   
+  <script type="text/javascript" src="{{STATIC_URL}}maploom/src/common/addlayers/LayersService.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="{{STATIC_URL}}maploom/src/common/addlayers/RegistryLayersDirective.js"></script>
+  
+  
+  
   <script type="text/javascript" src="{{STATIC_URL}}maploom/src/common/addlayers/ServerService.js"></script>
   
   
