--- a/index-lite.html
+++ b/index-lite.html
@@ -161,6 +161,14 @@
   
   
   
+  <script type="text/javascript" src="src/common/addlayers/LayersService.js"></script>
+  
+  
+  
+  <script type="text/javascript" src="src/common/addlayers/RegistryLayersDirective.js"></script>
+  
+  
+  
   <script type="text/javascript" src="src/common/addlayers/ServerService.js"></script>
   
   
