Change configuration and name of keys to accept an agnostic API to search engine

--- a/src/index.html
+++ b/src/index.html
@@ -60,14 +60,10 @@
         }],
         localGeoServerBaseUrl: "{{ GEOSERVER_BASE_URL }}",
         localCSWBaseUrl: "{{ CATALOGUE_BASE_URL }}",
-        registryEnabled: "{{ REGISTRY }}",
-        registryUrl: "{{ REGISTRYURL }}",
         catalogList: "{{ CATALOGLIST }}",
         csrfToken: "{{ csrf_token }}",
         tools: [{ptype: "gxp_getfeedfeatureinfo"}],
-        registryEnabled: "{{ REGISTRY }}".toLowerCase(),
-        registryUrl: "{{ REGISTRYURL }}",
-        catalogList: catalogList
+        registryEnabled: "{{ REGISTRY }}".toLowerCase()
     };
     goog.object.extend( config, {{ config|safe }});
 </script>
